--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Spotify song shuffler</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
     <style type="text/css">
       #login, #loggedin {
         display: none;
@@ -16,8 +16,6 @@
       }
     </style>
   </head>
-
-
 
   <body id="loginpage">
 
@@ -72,7 +70,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="shuffle.js"></script>
+    <script src="/js/shuffle.js"></script>
     <script>
       (function() {
 
