--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <div class="container">
       <div id="login">
         <h1>Spotify Shuffler</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+        <a href="/login" id="login-button">Log in with Spotify</a>
       </div>
       <div id="loggedin">
         <div id="user-profile">
@@ -19,11 +19,7 @@
 
         <div id="user-tracks-external-urls">
         </div>
-        
-        <div id="oauth">
-        </div>
 
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
       </div>
     </div>
 
@@ -50,4 +46,3 @@
     <script src="/js/handlePageLoad.js"></script>
   </body>
 </html>
-
